@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <api>
-  <symbol type="simple" cname="GtkType" name="int"/>
+  <symbol type="simple" cname="GtkType" name="uint"/>
 </api>
 
