@@ -2,7 +2,7 @@
 //
 // Author: Mike Kestner <mkestner@speakeasy.net>
 //
-// (c) 2001 Mike Kestner
+// (c) 2001-2003 Mike Kestner and Ximian Inc.
 
 namespace GtkSharp.Generation {
 
@@ -13,132 +13,129 @@ namespace GtkSharp.Generation {
 
 	public class Parser  {
 		
-		private XmlDocument doc;
-		
-		public Parser (String filename)
+		private XmlDocument Load (string filename)
 		{
-			doc = new XmlDocument ();
+			XmlDocument doc = new XmlDocument ();
 
 			try {
-
 				Stream stream = File.OpenRead (filename);
 				doc.Load (stream);
 				stream.Close ();
-
 			} catch (XmlException e) {
-
 				Console.WriteLine ("Invalid XML file.");
-				Console.WriteLine (e.ToString());
+				Console.WriteLine (e);
+				doc = null;
 			}
 
+			return doc;
 		}
 
-		public void Parse (bool generate)
+		public IGeneratable[] Parse (string filename)
 		{
+			XmlDocument doc = Load (filename);
+			if (doc == null)
+				return null;
+
 			XmlElement root = doc.DocumentElement;
 
 			if ((root == null) || !root.HasChildNodes) {
-					Console.WriteLine ("No Namespaces found.");
-					return;
+				Console.WriteLine ("No Namespaces found.");
+				return null;
 			}
 
-			foreach (XmlNode ns in root.ChildNodes) {
-				XmlElement elem = ns as XmlElement;
+			ArrayList gens = new ArrayList ();
+
+			foreach (XmlNode child in root.ChildNodes) {
+				XmlElement elem = child as XmlElement;
 				if (elem == null)
 					continue;
 
-				if (ns.Name == "namespace")
-					ParseNamespace (elem, generate);
-				else if (ns.Name == "symbol")
-					ParseSymbol (elem);
+				switch (child.Name) {
+				case "namespace":
+					gens.AddRange (ParseNamespace (elem));
+					break;
+				case "symbol":
+					gens.Add (ParseSymbol (elem));
+					break;
+				default:
+					Console.WriteLine ("Parser::Parse - Unexpected child node: " + child.Name);
+					break;
+				}
 			}
+
+			return (IGeneratable[]) gens.ToArray (typeof (IGeneratable));
 		}
 
-		private void ParseNamespace (XmlElement ns, bool generate)
+		private ArrayList ParseNamespace (XmlElement ns)
 		{
-			String ns_name = ns.GetAttribute ("name");
+			ArrayList result = new ArrayList ();
 
 			foreach (XmlNode def in ns.ChildNodes) {
 
-				if (def.NodeType != XmlNodeType.Element) {
+				XmlElement elem = def as XmlElement;
+				if (elem == null)
 					continue;
-				}
 
-				XmlElement elem = (XmlElement) def;
-				IGeneratable igen = null;
-				
 				if (elem.HasAttribute("hidden"))
 					continue;
 
-				switch (def.Name) {
+				bool is_opaque = false;
+				if (elem.HasAttribute ("opaque"))
+					is_opaque = true;
 
+				switch (def.Name) {
 				case "alias":
 					string aname = elem.GetAttribute("cname");
 					string atype = elem.GetAttribute("type");
 					if ((aname == "") || (atype == ""))
 						continue;
-					SymbolTable.Table.AddAlias (aname, atype);
+					result.Add (new AliasGen (aname, atype));
 					break;
-					
 				case "boxed":
-					if (elem.HasAttribute ("opaque"))
-						igen = new OpaqueGen (ns, elem);
-					else
-						igen = new BoxedGen (ns, elem);
+					result.Add (is_opaque ? new OpaqueGen (ns, elem) as object : new BoxedGen (ns, elem) as object);
 					break;
-
 				case "callback":
-					igen = new CallbackGen (ns, elem);
+					result.Add (new CallbackGen (ns, elem));
 					break;
-
 				case "enum":
-					igen = new EnumGen (ns, elem);
+					result.Add (new EnumGen (ns, elem));
 					break;
-
 				case "interface":
-					igen = new InterfaceGen (ns, elem);
+					result.Add (new InterfaceGen (ns, elem));
 					break;
-
 				case "object":
-					igen = new ObjectGen (ns, elem);
+					result.Add (new ObjectGen (ns, elem));
 					break;
-
 				case "class":
-					igen = new ClassGen (ns, elem);
+					result.Add (new ClassGen (ns, elem));
 					break;
-
 				case "struct":
-					if (elem.HasAttribute ("opaque"))
-						igen = new OpaqueGen (ns, elem);
-					else
-						igen = new StructGen (ns, elem);
+					result.Add (is_opaque ? new OpaqueGen (ns, elem) as object : new StructGen (ns, elem) as object);
 					break;
-
 				default:
-					Console.WriteLine ("Unexpected node named " + def.Name);
+					Console.WriteLine ("Parser::ParseNamespace - Unexpected node: " + def.Name);
 					break;
-				}
-
-				if (igen != null) {
-					igen.DoGenerate = generate;
-					SymbolTable.Table.AddType (igen);
 				}
 			}
 
+			return result;
 		}
 
-		private void ParseSymbol (XmlElement symbol)
+		private IGeneratable ParseSymbol (XmlElement symbol)
 		{
 			string type = symbol.GetAttribute ("type");
 			string cname = symbol.GetAttribute ("cname");
 			string name = symbol.GetAttribute ("name");
+			IGeneratable result = null;
 
 			if (type == "simple")
-				SymbolTable.Table.AddType (new SimpleGen (cname, name));
+				result = new SimpleGen (cname, name);
 			else if (type == "manual")
-				SymbolTable.Table.AddType (new ManualGen (cname, name));
+				result = new ManualGen (cname, name);
 			else
-				Console.WriteLine ("Unexpected symbol type " + type);
+				Console.WriteLine ("Parser::ParseSymbol - Unexpected symbol type " + type);
+
+			return result;
 		}
 	}
 }
