@@ -1,3 +1,12 @@
+2003-10-03  Mike Kestner  <mkestner@ximian.com>
+
+	* api/gtk-symbols.xml : make GtkType a uint like GType.
+	* generator/CodeGenerator.cs : adopt new parser semantics
+	* generator/Parser.cs : move to single parser/multiple Parse. Remove
+	DoGenerate hack and let the CodeGenerator control this. Return 
+	generatables instead of loading symboltable.
+	* generator/SymbolTable : add AddTypes method. Revamp dealiasing code.
+
 2003-10-02  Mike Kestner  <mkestner@ximian.com>
 
 	* api/gnome-api.xml : regenerated
